Finishing touches on the homepage and bug fixes. - Converted homepage and global styles to use SASS instead of css - Removed some Next.js boilerplate. - Updated the UpdateRequestor to accept a prop with an initial time. - Refactored UpdateRequestor to allow parent to control time display and update - Fixed unit test related to UpdateRequestor Refactored - Refactored API endpoint to use a time query param for synchronized record keeping. - Updated RateHistory to hide overflow and allow user to scroll to record. - Importing UpdateRequestor as Dynamic component - Added all relevant components to hompepage - Removed styling for refresh rotation due to bugs.

--- a/components/RateHistory/RateHistory.module.scss
+++ b/components/RateHistory/RateHistory.module.scss
@@ -9,8 +9,14 @@
   }
 
   ul {
+    max-height: 30rem;
+
+    border-bottom: 1px solid black;
+
     margin: 0;
-    padding: 0;
+    padding: .2rem;
+
+    overflow: scroll;
   }
 
   .RateRecord {
